// This source file has been modified by Huawei Technologies Co., Ltd.
// Copyright (c) 2018 Huawei Technologies Co., Ltd. All Rights Reserved.
//
// Copyright 2015, Google Inc.
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of Google Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";

package proto;


service Controller {
    // Create a volume
    rpc CreateVolume (CreateVolumeOpts) returns (GenericResponse){}
    
    // Delete a volume
    rpc DeleteVolume (DeleteVolumeOpts) returns (GenericResponse){}
    
    // Extend a volume
    rpc ExtendVolume (ExtendVolumeOpts) returns (GenericResponse){}
    
    // Create a volume snapshot
    rpc CreateVolumeSnapshot (CreateVolumeSnapshotOpts) 
      returns (GenericResponse){}
    
    // Delete a volume snapshot
    rpc DeleteVolumeSnapshot (DeleteVolumeSnapshotOpts) 
      returns (GenericResponse){}
    
    // Create a volume attachment
    rpc CreateVolumeAttachment (CreateVolumeAttachmentOpts)
      returns (GenericResponse){}
    
    // Delete a volume attachment
    rpc DeleteVolumeAttachment (DeleteVolumeAttachmentOpts)
      returns (GenericResponse){}

    // Create a replication
    rpc CreateReplication (CreateReplicationOpts) returns (GenericResponse){}

    // Delete a replication
    rpc DeleteReplication (DeleteReplicationOpts) returns (GenericResponse){}

    // Enable a replication
    rpc EnableReplication (EnableReplicationOpts) returns (GenericResponse){}

    // Disable a replication
    rpc DisableReplication (DisableReplicationOpts) returns (GenericResponse){}

    // Failover a replication
    rpc FailoverReplication (FailoverReplicationOpts) returns (GenericResponse){}

    // Create a volume group
    rpc CreateVolumeGroup (CreateVolumeGroupOpts) returns (GenericResponse){}
	
    // Update volume group
    rpc UpdateVolumeGroup (UpdateVolumeGroupOpts) returns (GenericResponse){}
	
    // Delete volume group
    rpc DeleteVolumeGroup (DeleteVolumeGroupOpts) returns (GenericResponse){}}

// CreateVolumeOpts is a structure which indicates all required properties
// for creating a volume.
message CreateVolumeOpts {
    // The message of request, required.
    string message = 1;
    // The Context
    string context = 2;
}

// DeleteVolumeOpts is a structure which indicates all required properties
// for deleting a volume.
message DeleteVolumeOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

// ExtendVolumeOpts is a structure which indicates all required properties
// for Extending a volume.
message ExtendVolumeOpts {
    // The id of volume, required.
    string id = 1;
    // The message of request, required.
    string message = 2;
	// The Context
    string context = 3;
}

// CreateVolumeAttachmentOpts is a structure which indicates all required properties
// for creating a volume attachment.
message CreateVolumeAttachmentOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

// CreateVolumeAttachmentOpts is a structure which indicates all required properties
// for deleting a volume attachment.
message DeleteVolumeAttachmentOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

// CreateVolumeSnapshotOpts is a structure which indicates all required properties
// for creating a volume snapshot.
message CreateVolumeSnapshotOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

// DeleteVolumeSnapshotOpts is a structure which indicates all required properties
// for deleting a volume snapshot.
message DeleteVolumeSnapshotOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

// CreateReplicationOpts is a structure which indicates all required properties
// for creating a replication.
// NOTE: Need to figure out how to handle more than 2 sites.
message CreateReplicationOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

// Delete ReplicationOpts is a structure which indicates all required properties
// for deleting a replication.
// NOTE: Need to figure out how to handle more than 2 sites.
message DeleteReplicationOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}


// Delete ReplicationOpts is a structure which indicates all required properties
message EnableReplicationOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

// Delete ReplicationOpts is a structure which indicates all required properties
message DisableReplicationOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

// Delete ReplicationOpts is a structure which indicates all required properties
message FailoverReplicationOpts {
    // The message of request, required.
    string message = 1;
	string failoverMessage = 2;
	// The Context
    string context = 3;
}

// CreateVolumeGroupOpts is a structure which indicates all required
// properties for creating a volume group.
message CreateVolumeGroupOpts {
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

message UpdateVolumeGroupOpts{
    // The message of request, required.
    string message = 1;
	repeated string addVolMessage = 2;
	repeated string rmVolMessage = 3;
	// The Context
    string context = 4;
}

message DeleteVolumeGroupOpts{
    // The message of request, required.
    string message = 1;
	// The Context
    string context = 2;
}

message GenericResponse {}
